# shelter_volunteers

./: .env.development  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CODING_STANDARDS.MD  CONTRIBUTING.md  README.md  compose.prod.yaml  compose.yaml  docker-compose.yml  package-lock.json  requirements.txt  volunteer-signup.html  volunteer_dashboard.html
server/: .env  .env.development  .env.pre-production  .gitignore  Dockerfile  README.md  app.py  cli.py  development-entrypoint.sh  production-entrypoint.sh  pyproject.toml  requirements.txt  responses.py  run_dev_server.sh  test_service_commitment.py  wsgi.py
server/application/: app.py  config.py  token_required.py
server/authentication/: authenticate_user.py  google_authentication.py  token.py  user_list.json
server/cli/: admin_cli.py
server/config/: mongo_config.json  mongodb_config.py
server/domains/: resources.py  service_commitment.py  service_shift.py  shelter.py  shelter_volunteer.py  staffing.py  user_info.py  volunteer.py  volunteer_shift.py  waitlist_entry.py  work_shift.py  workshift.py
server/errors/: authentication.py  not_found.py  responses.py
server/middleware/: middleware.py
server/reminder_email/: email_service.py  reminder_handler.py
server/repository/: manage.py  memrepo.py  mongorepo.py  shelter_repo.py
server/request/: time_filter.py  work_shift_list.py
server/requests/: work_shift_list.py
server/scheduler/: reminder_scheduler.py
server/scripts/: run_reminder_check_once.py  send_demo_24h_reminder_email.py  send_test_email.py
server/serializers/: address.py  service_shift.py  (+10 more)
(+417 files in other folders)
